--- a/assesment2.html
+++ b/assesment2.html
@@ -52,5 +52,15 @@
 <body>
     <h1>Data Articles</h1>
     <div id="articles-table-container"></div>
+    <br>
+    <form id="article-form" action="#">
+        <label for="title-input">Judul Artikel:</label>
+        <input type="text" id="title-input" name="title-input"><br><br>
+        <label for="author-input">Penulis Artikel:</label>
+        <input type="text" id="author-input" name="author-input"><br><br>
+        <label for="date-input">Tanggal Publikasi Artikel:</label>
+        <input type="text" id="date-input" name="date-input"><br><br>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
